🚧 Fix overflow on sales button

--- a/assets/sass/mentoria.scss
+++ b/assets/sass/mentoria.scss
@@ -34,7 +34,7 @@ a {
     font-size: 1.2rem;
     background: #ffff3e;
     color: $colorPrimary;
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
     box-shadow: 0 6px 20px -10px #222222 !important;
     transition: all 0.4s ease-in-out;
